dnl configure.ac -- use autoconf to create configure from this file.
dnl
dnl This file is part of maude-mode
dnl
dnl Written and Copyright (c) 2007 by Marcel Kyas
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License as
dnl published by the Free Software Foundation; either version 2 of the
dnl License, or (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
dnl 02111-1307, USA.

AC_INIT([Maude Mode], 1.0, [rudi@users.sourceforge.net], [maude-mode])
AC_PREREQ([2.59])
AC_CONFIG_SRCDIR([maude-mode.el])
AM_INIT_AUTOMAKE([1.9])
AM_PATH_LISPDIR
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
